fix(input): Align type="time" correctly in Firefox. (#4591)
The height is already set on the input, this removes the padding causing issues in Firefox.

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -7,7 +7,7 @@
   & input,
   & .prefix,
   & .suffix {
-    @apply text-n2h h-6 p-2;
+    @apply text-n2h h-6;
   }
   & textarea {
     @apply h-6;
@@ -37,7 +37,7 @@
   & input,
   & .prefix,
   & .suffix {
-    @apply text-n1h h-8 p-3;
+    @apply text-n1h h-8;
   }
   & textarea {
     min-height: theme("spacing.8");
@@ -66,7 +66,7 @@
   & input,
   & .prefix,
   & .suffix {
-    @apply text-0h h-11 p-4;
+    @apply text-0h h-11;
   }
   & textarea {
     min-height: theme("spacing.11");
